# py-30days-workshop

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  noxfile.py  pyproject.toml
src/demo_app/: __about__.py  __init__.py  cli_args.py  contracts.py  settings.py
tests/: conftest.py  test_main.py
tests/contracts/: test_cli_args.py  test_contracts.py  test_settings.py  test_typeadapter.py
tests/e2e/: test_cli_e2e.py
